--- a/src/app/components/SignUp/style.css
+++ b/src/app/components/SignUp/style.css
@@ -71,3 +71,7 @@
   margin: 5px 0;
   max-width: 300px;
 }
+
+.signup-page-link {
+  margin-top: 35px;
+}
